src/components/SimpleStat/styles.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. *//* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

:root {
  --fontSize: var(--fontSize);
}

.component {
  font-size: var(--fontSize);
  background-color: #fff;
  padding: .875em;
  box-shadow: 0 2px 6px rgba(0, 0, 0, .07);
  margin: 2em 0 0 0;
}

@media all and (min-width: 42.5em) {
  .component {
    position: absolute;
    right: 2em;
  }
}

.stat {
  font-size: .875em;
}

.stat + .stat {
  margin-top: .4em;
}

